# customer_churn

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config.json  conftest.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-dev.yml  release.yml  validate.yml
customer_churn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/processed/: train_features.parquet
data/raw/: sample_submission_v2.csv  user_logs_v2.csv
deploy/: compose.dev.yml  compose.prod.yml  deploy-dev.sh  deploy-prod.sh
docs/: api.md  changes.md  cicd.md  deployment.md  oracle-cloud-setup.md
models/: baseline_lgb.txt  predictions.csv
scripts/: setup-server.sh
src/: main.py  utils.py
src/api/: app.py  database.py  dependencies.py  schemas.py
src/api/routers/: model.py  pipeline.py  predict.py
src/data/: preprocess.py
src/models/: cv_baseline.py  predict.py  train_baseline.py
tests/: conftest.py
tests/integration/: test_health.py  test_model.py  test_pipeline.py  test_predict.py
tests/unit/: test_database.py  test_schemas.py
