[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────
[project]
name = "customer-churn"
version = "1.0.0"
description = "End-to-end customer churn prediction ML service"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.1",
    "matplotlib==3.8.3",
    "pyarrow",
    "lightgbm",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic>=2.0.0,<2.10.0",
    "shap",
    "mlflow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",        # required by FastAPI TestClient
]

# ── Ruff (linter + formatter) ─────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade — flag syntax that can be modernised
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ────────────────────────────────────
[tool.pytest.ini_options]
testpaths  = ["tests"]
python_files = ["test_*.py"]
addopts    = "-v"
